# Paged-Infer

./: Cargo.toml  LICENSE  README.md
scripts/: analyze_sweep.py  download_model.py  run_e2e_sweep.sh
src/: gpu.rs  lib.rs  main.rs  math.rs  model.rs  speculative.rs  tensor.rs
src/memory/: allocator.rs  block_table.rs  kv_cache_manager.rs  mod.rs
src/shaders/: matvec.wgsl
tests/: math_tests.rs  paged_tests.rs  parity_tests.rs
